syntax = "proto3";

option csharp_namespace = "Microsoft.AutoGen.Core.Grpc.Tests.Protobuf";

message TextMessage {
    string content = 1;
    string source = 2;
}

message RpcTextMessage {
    string content = 1;
    string source = 2;
}